changed wording in form to avoid overlapping

--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -128,4 +128,8 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .englishHeader {
+        padding: 5px;
+    }
 }
